# CAS_NLP_Module3_Calibre_Project

./: .coveragerc  .gitignore  NLP_M3_NN_Tutorial.ipynb  README.md  TEST_RESULTS.md  batch_enrich.py  batch_enrich_sql.py  clinet.py  enrich_by_title_sql.py  extract_and_enrich_isbns.py  find_duplicates_sql.py  manual_test.py  mcp_prompts_resource.py  menu1.txt  menu2.txt  menu3.txt  prompts.py  pytest.ini  resource.py  setup.py  test_semantic_search_quick.py
.claude/: settings.local.json
2025/mcp-tutorial/: ollama_function_Calling_inclass.ipynb  openai_client.py
Calibre_stuff/: CalibreLibraryTools.py  CalibreSemanticSearch.py  calibre_metadata.json  calibre_semantic_search.ipynb  calibre_semantic_search_setup.py  setup_for_testing.txt  whatever.sh
calibre-search/: main.py  pyproject.toml
calibre_mcp/: __init__.py  app.py  server.py
calibre_mcp/tools/: __init__.py  book_details.py  calibre_cli.py  duplicate_finder.py  isbn_tools.py  metadata_enrichment.py  semantic_search.py  sql_query.py
calibre_tools/: __init__.py  batch_enrichment.py  cli_wrapper.py  config.py  duplicate_finder.py  isbn_tools.py  semantic_search.py
day_one/: italian.txt  lan_identifier.ipynb  romanian.txt
tests/: conftest.py
tests/calibre_mcp/: __init__.py
tests/calibre_tools/: __init__.py  test_cli_wrapper.py  test_config.py  test_duplicate_finder.py  test_isbn_tools.py  test_semantic_search.py
